k8s-platform-v2/03-apps/airflow-git-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-git-sync
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-git-sync
  template:
    metadata:
      labels:
        app: airflow-git-sync
    spec:
      securityContext:
        fsGroup: 65533
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: git-sync
        image: subhodeep2022/k8s-git-sync:v2
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 9533
        args:
          - "--repo=https://github.com/sp-202/airflow-dags.git"
          - "--ref=main"
          - "--root=/dags"
          - "--link=repo"
          - "--period=60s"
          - "--webhook-method=POST"
          - "--http-bind=0.0.0.0:9533"
          - "--exechook-command=/usr/local/bin/sync-hook.sh"
        volumeMounts:
        - name: bin-utils
          mountPath: /bin-utils
        - name: dags-shared
          mountPath: /dags
      volumes:
      - name: bin-utils
        emptyDir: {}
      - name: dags-shared
        persistentVolumeClaim:
          claimName: airflow-dags-shared-pvc
