k8s-platform-v2/03-apps/hms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-metastore
  template:
    metadata:
      labels:
        app: hive-metastore
    spec:
      containers:
      - name: hive-metastore
        image: apache/hive:4.0.0
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash", "-c"]
        args:
         - |
           /opt/hive/bin/schematool -dbType postgres -validate || /opt/hive/bin/schematool -dbType postgres -initSchema
           /opt/hive/bin/hive --service metastore
        ports:
        - containerPort: 9083
        volumeMounts:
        - name: hive-config
          mountPath: /opt/hive/conf/hive-site.xml
          subPath: hive-site.xml
        - name: hive-lib
          mountPath: /opt/hive/lib/postgresql-42.6.0.jar
          subPath: postgresql-42.6.0.jar
        - name: hive-lib
          mountPath: /opt/hive/lib/hadoop-aws-3.3.6.jar
          subPath: hadoop-aws-3.3.6.jar
        - name: hive-lib
          mountPath: /opt/hive/lib/aws-java-sdk-bundle-1.12.367.jar
          subPath: aws-java-sdk-bundle-1.12.367.jar
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: hive-config
        configMap:
          name: hive-config
      - name: hive-lib
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
  namespace: default
spec:
  ports:
  - name: metastore
    port: 9083
    targetPort: 9083
  selector:
    app: hive-metastore
