k8s-platform-v2/03-apps/s3-minio-redirect.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3.us-east-1.amazonaws.com
  namespace: default
spec:
  type: ExternalName
  externalName: minio.default.svc.cluster.local
  ports:
  - port: 443
    targetPort: 9000
    protocol: TCP
    name: https
