k8s-platform-v2/03-apps/spark-connect-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-connect-server
  namespace: default
  labels:
    app: spark-connect-server
spec:
  replicas: $(SPARK_CONNECT_REPLICAS)
  selector:
    matchLabels:
      app: spark-connect-server
  template:
    metadata:
      labels:
        app: spark-connect-server
        spark-role: driver
    spec:
      serviceAccountName: spark-operator-spark # Use the SA that has permissions to create pods
      # --- Pinning Spark Driver to spark-node ---
      nodeSelector:
        node-role.kubernetes.io/$(SPARK_NODE_ROLE): ""
      containers:
        - name: spark-connect-server
          image: $(SPARK_IMAGE)
          imagePullPolicy: Always
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
          ports:
            - containerPort: 15002
              name: spark-connect
            - containerPort: 4040
              name: spark-ui
          resources:
            requests:
              cpu: "$(SPARK_CONNECT_CPU_REQUEST)"
              memory: "$(SPARK_CONNECT_MEM_REQUEST)"
            limits:
              cpu: "$(SPARK_CONNECT_CPU_LIMIT)"
              memory: "$(SPARK_CONNECT_MEM_LIMIT)"
          volumeMounts:
            # --- UPDATED SECTION ---
            - name: spark-config-volume
              mountPath: /opt/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
      volumes:
        # --- UPDATED SECTION ---
        - name: spark-config-volume
          configMap:
            name: spark-config
---
apiVersion: v1
kind: Service
metadata:
  name: spark-connect-server-driver-svc
  namespace: default
spec:
  ports:
    - name: spark-connect
      port: 15002
      targetPort: 15002
    - name: spark-ui
      port: 4040
      targetPort: 4040
  selector:
    app: spark-connect-server
    spark-role: driver
  type: ClusterIP
