k8s-platform-v2/03-apps/spark-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-ui
  namespace: default
spec:
  ports:
  - name: spark-ui
    port: 4040
    protocol: TCP
    targetPort: 4040
  selector:
    spark-role: driver
    interpreterSettingName: spark
  type: NodePort
