k8s-platform-v2/03-apps/spark-history-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      labels:
        app: spark-history-server
    spec:
      containers:
      - name: spark-history-server
        image: subhodeep2022/spark-bigdata:spark-4.0.1-uc-0.3.1-proper-way-v7-compatible-jars
        command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.history.HistoryServer"]
        resources:
          requests:
            cpu: "1000m"
            memory: "1Gi"
          limits:
            cpu: "1500m"
            memory: "1.5Gi"
        ports:
        - containerPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 18080
    targetPort: 18080
    protocol: TCP
    name: http
  selector:
    app: spark-history-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ingress
  namespace: default
spec:
  ingressClassName: traefik  # <--- This replaces the deprecated annotation
  rules:
  - host: spark-history.44.213.119.37.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-history-server
            port:
              number: 18080
